--- a/index.htm
+++ b/index.htm
@@ -10,44 +10,102 @@
 
 </head>
 <body>
-<header>
-<nav class="navbar navbar-toggleable navbar-inverse bg-info bg-inverse">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-            data-target="#collapsingNavbarXs">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="container">
-        <a class="navbar-brand logo" href="#">wolla</a>
-        <div class="navbar-collapse collapse" id="collapsingNavbarXs">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-            </ul>
-        </div>
+<div id = "fill_screen">
+
+    <header>
+        <nav class="navbar navbar-toggleable navbar-inverse "><!--bg-inverse-->
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                    data-target="#collapsingNavbarXs">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="container">
+                <a class="navbar-brand logo" href="#">wolla</a>
+                <div class="navbar-collapse collapse" id="collapsingNavbarXs">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <div>
+        <section class="container">
+            <div class="row">
+                <div class="col-md-4" style="background: violet">aaaa</div>
+                <div class="col-md-8" style="background: #82ee77">bbbb</div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6" style="background: #ee2927">aaaa</div>
+                <div class="col-md-6" style="background: #6936ee">bbbb</div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6" style="background: #71eeeb">aaaa</div>
+                <div class="col-md-6" style="background: #b8ee30">bbbb</div>
+            </div>
+        </section>
+
     </div>
-</nav>
-</header>
-<div>
-    <section class="container-fluid">
-        <div class="row">
-            <div class="col-md-4" style="background: violet">aaaa</div>
-            <div class="col-md-8" style="background: #82ee77">bbbb</div>
-        </div>
+</div>
 
-        <div class="row">
-            <div class="col-md-6" style="background: #ee2927">aaaa</div>
-            <div class="col-md-6" style="background: #6936ee">bbbb</div>
-        </div>
 
-        <div class="row">
-            <div class="col-md-6" style="background: #71eeeb">aaaa</div>
-            <div class="col-md-6" style="background: #b8ee30">bbbb</div>
-        </div>
-    </section>
+
+<div id = "followup_div">
+
+
+    <header>
+        <nav class="navbar navbar-toggleable navbar-inverse "><!--bg-inverse-->
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                    data-target="#collapsingNavbarXs">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="container">
+                <a class="navbar-brand logo" href="#">wolla</a>
+                <div class="navbar-collapse collapse" id="collapsingNavbarXs">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <div>
+        <section class="container">
+            <div class="row">
+                <div class="col-md-4" style="background: violet">aaaa</div>
+                <div class="col-md-8" style="background: #82ee77">bbbb</div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6" style="background: #ee2927">aaaa</div>
+                <div class="col-md-6" style="background: #6936ee">bbbb</div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6" style="background: #71eeeb">aaaa</div>
+                <div class="col-md-6" style="background: #b8ee30">bbbb</div>
+            </div>
+        </section>
+
+    </div>
+
+
+    dssd
+    dssddssd
+    sddsdsdsdsdsdsd
 </div>
 
 <!-- JavaScript -->
