--- a/example.html
+++ b/example.html
@@ -3,19 +3,113 @@
 <head>
     <meta charset="utf-8">
     <title>section</title>
+
+    <link href="example.css" rel="stylesheet">
 </head>
 <body>
-<section>
-    <h1>Съёмки фильма Полипропилен</h1>
-    <p>История о том, как снимали фильм, где герои отдыхали на пляже,
-        потом пришёл антагонист, избил протагонистов, сбросил их в бассейн,
-        и что из этого получилось.</p>
-</section>
-<section>
-    <h1>Хороший язык</h1>
-    <p>История о том, как проходила студия изучения языка эсперанто,
-        в то время, как над ней, на веранде велась студия приколистов,
-        где травились анекдоты, и что из этого получилось.</p>
-</section>
+
+<!-- example 1 - using absolute position for center -->
+<nav class="navbar navbar-toggleable-sm navbar-inverse bg-primary">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand abs" href="#">Navbar 1</a>
+    <div class="navbar-collapse collapse" id="collapsingNavbar">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#features">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#myAlert" data-toggle="collapse">Link</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="" data-target="#myModal" data-toggle="modal">About</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<!-- example 2 - using auto margins -->
+<nav class="navbar navbar-toggleable-sm navbar-inverse bg-primary">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target=".dual-collapse">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse dual-collapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#features">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+        </ul>
+    </div>
+    <a class="navbar-brand d-flex mx-auto" href="#">Navbar 2</a>
+    <div class="navbar-collapse collapse dual-collapse">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<!--
+example 3 - Navbar with brand left, links on center and right that collapse inot the vertical mobile
+    menu
+-->
+<nav class="navbar navbar-light navbar-toggleable-sm bg-faded justify-content-center">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapsingNavbar3">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <a href="/" class="navbar-brand d-flex w-50 mr-auto">Brand</a>
+    <div class="navbar-collapse collapse" id="collapsingNavbar3">
+        <ul class="navbar-nav mx-auto w-100 justify-content-center">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+        </ul>
+        <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Right</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Right</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Right</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="text-center">viewport center</div>
+
+
+
+
 </body>
 </html>
