--- a/index.htm
+++ b/index.htm
@@ -25,9 +25,9 @@
                 <a class="logo-nav navbar-brand logo-nav mr-auto" href="#">Logo</a>
             </div>
             <div class="col-md-6">
-                <div class="c logo-nav collapse navbar-collapse" id="navbarTogglerDemo02">
+                <div class="logo-nav collapse navbar-collapse" id="navbarTogglerDemo02">
 
-                    <ul class="navbar-nav ml-auto mt-2 mt-md-0">
+                    <ul class="navbar-nav nav-ul ml-auto mt-2 mt-md-0">
                         <li> <!-- centre it -->
                             <a href="#">Link</a>
                         </li>
