--- a/index.htm
+++ b/index.htm
@@ -10,38 +10,48 @@
 
 </head>
 <body>
+
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded fixed-top">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <section class="container">
+        <div class="logo-fix col-md-6">
+            <a class="logo-nav navbar-brand logo-nav mr-auto" href="#">Logo</a>
+        </div>
+        <div class="col-md-6">
+            <div class="logo-nav collapse navbar-collapse" id="navbarTogglerDemo02">
+
+                <ul class="navbar-nav nav ml-auto mt-2 mt-md-0">
+                    <li> <!-- centre it -->
+                        <a href="#">Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Long Link</a>
+                    </li>
+                    <li>
+                        <a href="#">Very Long Link</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+</nav>
+
 <div class="fill_screen">
+
+    <video autoplay loop muted class="myvid">
+        <source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+        Your browser does not support the video tag. I suggest you upgrade your browser.
+    </video>
 
     <!-------------------------------->
 
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <section class="container">
-            <div class="logo-fix col-md-6">
-                <a class="logo-nav navbar-brand logo-nav mr-auto" href="#">Logo</a>
-            </div>
-            <div class="col-md-6">
-                <div class="logo-nav collapse navbar-collapse" id="navbarTogglerDemo02">
 
-                    <ul class="navbar-nav nav-ul ml-auto mt-2 mt-md-0">
-                        <li> <!-- centre it -->
-                            <a href="#">Link</a>
-                        </li>
-                        <li>
-                            <a href="#">Long Link</a>
-                        </li>
-                        <li>
-                            <a href="#">Very Long Link</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-    </nav>
+
+
 
     <!-------------------------------->
 
@@ -89,7 +99,91 @@
 
     </div>
 
+    <div>
+        <section class="container">
+            <div class="row">
+                <div class="col-md-4" style="background: violet">aaaa</div>
+                <div class="col-md-8" style="background: #82ee77">bbbb</div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6" style="background: #ee2927">aaaa</div>
+                <div class="col-md-6" style="background: #6936ee">bbbb</div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6" style="background: #71eeeb">aaaa</div>
+                <div class="col-md-6" style="background: #b8ee30">bbbb</div>
+            </div>
+        </section>
+
+    </div>
+
+    <div>
+        <section class="container">
+            <div class="row">
+                <div class="col-md-4" style="background: violet">aaaa</div>
+                <div class="col-md-8" style="background: #82ee77">bbbb</div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6" style="background: #ee2927">aaaa</div>
+                <div class="col-md-6" style="background: #6936ee">bbbb</div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6" style="background: #71eeeb">aaaa</div>
+                <div class="col-md-6" style="background: #b8ee30">bbbb</div>
+            </div>
+        </section>
+
+    </div>
+
+    <div>
+        <section class="container">
+            <div class="row">
+                <div class="col-md-4" style="background: violet">aaaa</div>
+                <div class="col-md-8" style="background: #82ee77">bbbb</div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6" style="background: #ee2927">aaaa</div>
+                <div class="col-md-6" style="background: #6936ee">bbbb</div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6" style="background: #71eeeb">aaaa</div>
+                <div class="col-md-6" style="background: #b8ee30">bbbb</div>
+            </div>
+        </section>
+
+    </div>
+
+    <div>
+        <section class="container">
+            <div class="row">
+                <div class="col-md-4" style="background: violet">aaaa</div>
+                <div class="col-md-8" style="background: #82ee77">bbbb</div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6" style="background: #ee2927">aaaa</div>
+                <div class="col-md-6" style="background: #6936ee">bbbb</div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6" style="background: #71eeeb">aaaa</div>
+                <div class="col-md-6" style="background: #b8ee30">bbbb</div>
+            </div>
+        </section>
+
+    </div>
+
 </div>
+
+
+
+
 
 <!-- JavaScript -->
 
