test col for second div with information

--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jolla</title>
     <!-- CSS -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -23,8 +24,7 @@
         </div>
         <div class="col-md-6">
             <div class="logo-nav collapse navbar-collapse" id="navbarTogglerDemo02">
-
-                <ul class="navbar-nav nav ml-auto mt-2 mt-md-0">
+                <ul class="navbar-nav nav ml-auto">
                     <li> <!-- centre it -->
                         <a href="#">Link</a>
                     </li>
@@ -41,7 +41,7 @@
 </nav>
 
 <div class="fill_screen">
-
+<!--
     <video autoplay loop muted class="myvid">
         <source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
         Your browser does not support the video tag. I suggest you upgrade your browser.
@@ -78,112 +78,23 @@
 
 
 <div id="followup_div">
-
-    <div>
-        <section class="container">
+    <section class="container-fluid">
             <div class="row">
-                <div class="col-md-4" style="background: violet">aaaa</div>
-                <div class="col-md-8" style="background: #82ee77">bbbb</div>
+                <div class="col-lg-4 col-sm-12" style="background: violet">aaaa</div>
+                <div class="col-lg-8 col-sm-12 mydiv pos-r" style="background: #b8ee30"><img src="0001.jpg" class="myimg"></div>
             </div>
 
             <div class="row">
-                <div class="col-md-6" style="background: #ee2927">aaaa</div>
-                <div class="col-md-6" style="background: #6936ee">bbbb</div>
+                <div class="col-md-6 mobile-buttom mydiv" style="background: #ee2927; right: 0"><img src="0001.jpg" class="myimg"></div>
+                <div class="col-md-6 mobile-top" style="background: #6936ee ; left: 0">bbbb</div>
             </div>
 
             <div class="row">
-                <div class="col-md-6" style="background: #71eeeb">aaaa</div>
-                <div class="col-md-6" style="background: #b8ee30">bbbb</div>
+                <div class="col-md-6 order-1" style="background: #71eeeb">aaaa</div>
+                <div class="col-md-6 order-2" style="background: #b8ee30">bbbb</div>
             </div>
         </section>
-
-    </div>
-
-    <div>
-        <section class="container">
-            <div class="row">
-                <div class="col-md-4" style="background: violet">aaaa</div>
-                <div class="col-md-8" style="background: #82ee77">bbbb</div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6" style="background: #ee2927">aaaa</div>
-                <div class="col-md-6" style="background: #6936ee">bbbb</div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6" style="background: #71eeeb">aaaa</div>
-                <div class="col-md-6" style="background: #b8ee30">bbbb</div>
-            </div>
-        </section>
-
-    </div>
-
-    <div>
-        <section class="container">
-            <div class="row">
-                <div class="col-md-4" style="background: violet">aaaa</div>
-                <div class="col-md-8" style="background: #82ee77">bbbb</div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6" style="background: #ee2927">aaaa</div>
-                <div class="col-md-6" style="background: #6936ee">bbbb</div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6" style="background: #71eeeb">aaaa</div>
-                <div class="col-md-6" style="background: #b8ee30">bbbb</div>
-            </div>
-        </section>
-
-    </div>
-
-    <div>
-        <section class="container">
-            <div class="row">
-                <div class="col-md-4" style="background: violet">aaaa</div>
-                <div class="col-md-8" style="background: #82ee77">bbbb</div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6" style="background: #ee2927">aaaa</div>
-                <div class="col-md-6" style="background: #6936ee">bbbb</div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6" style="background: #71eeeb">aaaa</div>
-                <div class="col-md-6" style="background: #b8ee30">bbbb</div>
-            </div>
-        </section>
-
-    </div>
-
-    <div>
-        <section class="container">
-            <div class="row">
-                <div class="col-md-4" style="background: violet">aaaa</div>
-                <div class="col-md-8" style="background: #82ee77">bbbb</div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6" style="background: #ee2927">aaaa</div>
-                <div class="col-md-6" style="background: #6936ee">bbbb</div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-6" style="background: #71eeeb">aaaa</div>
-                <div class="col-md-6" style="background: #b8ee30">bbbb</div>
-            </div>
-        </section>
-
-    </div>
-
 </div>
-
-
-
-
 
 <!-- JavaScript -->
 
