--- a/index.htm
+++ b/index.htm
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jolla</title>
     <!-- CSS -->
-    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+   <!-- <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> -->
     <link href="CSS/style.css" rel="stylesheet">
 
 </head>
 <body>
 
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded fixed-top">
+<!-- NAVBAR ------------------------------->
+
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded sticky-top">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -40,20 +44,9 @@
     </section>
 </nav>
 
+<!-- END OF NAVBAR ------------------------------>
+
 <div class="fill_screen">
-<!--
-    <video autoplay loop muted class="myvid">
-        <source src="http://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-        Your browser does not support the video tag. I suggest you upgrade your browser.
-    </video>
-
-    <!-------------------------------->
-
-
-
-
-
-    <!-------------------------------->
 
     <div>
         <section class="container">
@@ -80,13 +73,25 @@
 <div id="followup_div">
     <section class="container-fluid">
             <div class="row">
-                <div class="col-lg-4 col-sm-12" style="background: violet">aaaa</div>
-                <div class="col-lg-8 col-sm-12 mydiv pos-r" style="background: #b8ee30"><img src="0001.jpg" class="myimg"></div>
+                <div class="col-lg-4 col-sm-12" style="background: violet">
+                    <div class="my-text-div">
+                        <p class="my-head-text">P-HEAD</p>
+                        <h3>HEADER</h3>
+                        <p>Alice's character has her origins in stories told by Carroll to entertain the Liddell sisters while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips. Although she shares her name with Alice Liddell's given name, scholars disagree about whether or not she can be identified as being strictly based upon Liddell. Carroll characterised her as "loving and gentle", "courteous to all", "trustful", and "wildly curious".[1] His illustrations of her in Alice's Adventures Under Ground, the first version of Alice's Adventures in Wonderland are influenced by the Pre-Raphaelite artists.</p>
+                    </div>
+                </div>
+                <div class="col-lg-8 col-sm-12 mydiv pos-r" style="background: #b8ee30"><img src="example-div-img.png" class="myimg"></div>
             </div>
 
             <div class="row">
-                <div class="col-md-6 mobile-buttom mydiv" style="background: #ee2927; right: 0"><img src="0001.jpg" class="myimg"></div>
-                <div class="col-md-6 mobile-top" style="background: #6936ee ; left: 0">bbbb</div>
+                <div class="col-lg-8 col-sm-12 mobile-buttom mydiv" style="background: #ee2927; right: 0"><img src="example-div-img.png" class="myimg"></div>
+                <div class="col-lg-4 col-sm-12 mobile-top" style="background: #6936ee ; left: 0">
+                    <div class="my-text-div">
+                        <p class="my-head-text">P-HEAD</p>
+                        <h3>HEADER</h3>
+                        <p>Alice's character has her origins in stories told by Carroll to entertain the Liddell sisters while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips. Although she shares her name with Alice Liddell's given name, scholars disagree about whether or not she can be identified as being strictly based upon Liddell. Carroll characterised her as "loving and gentle", "courteous to all", "trustful", and "wildly curious".[1] His illustrations of her in Alice's Adventures Under Ground, the first version of Alice's Adventures in Wonderland are influenced by the Pre-Raphaelite artists.</p>
+                    </div>
+                </div>
             </div>
 
             <div class="row">
@@ -98,14 +103,9 @@
 
 <!-- JavaScript -->
 
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
-        integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
-        crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
-        integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-        crossorigin="anonymous"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 
 <!-- END of JavaScript -->
