--- a/index.htm
+++ b/index.htm
@@ -7,27 +7,28 @@
     <title>Jolla</title>
     <!-- CSS -->
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-   <!-- <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <!-- <link href="bootstrap/css/bootstrap.css" rel="stylesheet"> -->
     <link href="CSS/style.css" rel="stylesheet">
 
 </head>
 <body>
 
-<!-- NAVBAR ------------------------------->
+<!-- NAVBAR -->
 
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded sticky-top">
+<nav class="navbar navbar-toggleable-md navbar-light fixed-top my-nav-backgroung">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-            data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+            data-target="#navbarbuttom" aria-controls="navbarbuttom" aria-expanded="false"
             aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <section class="container">
         <div class="logo-fix col-md-6">
-            <a class="logo-nav navbar-brand logo-nav mr-auto" href="#">Logo</a>
+            <a class="my-logo-nav navbar-brand logo-nav mr-auto logo" href="#">jolla</a>
         </div>
         <div class="col-md-6">
-            <div class="logo-nav collapse navbar-collapse" id="navbarTogglerDemo02">
+            <div class="my-logo-nav collapse navbar-collapse " id="navbarbuttom">
                 <ul class="navbar-nav nav ml-auto">
                     <li> <!-- centre it -->
                         <a href="#">Link</a>
@@ -44,68 +45,135 @@
     </section>
 </nav>
 
-<!-- END OF NAVBAR ------------------------------>
+<!-- END OF NAVBAR -->
 
-<div class="fill_screen">
+<div class="fill_screen" style="background-image: url('1-screen-background.jpg') ;background-size: auto 100vh ; background-position: right top;">
+    <div class="container">
+    <div class="my-1-screen-text-div">
+        <h1>
+            <p>Ми</p><p> сладкие</p><p> как конфетки</p>
+        </h1>
+    </div>
+    </div>
+    
+</div>
 
-    <div>
-        <section class="container">
-            <div class="row">
-                <div class="col-md-4" style="background: violet">aaaa</div>
-                <div class="col-md-8" style="background: #82ee77">bbbb</div>
+
+<div class="followup_div">
+
+    <div class="full_screen">
+        sadasdasdadsя
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-4 col-sm-12" style="background: violet">
+                <div class="my-text-div">
+                    <p class="my-head-text">P-HEAD</p>
+                    <h3>HEADER</h3>
+                    <p>Alice's character has her origins in stories told by Carroll to entertain the Liddell sisters
+                        while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips.
+                        Although she shares her name with Alice Liddell's given name, scholars disagree about
+                        whether or not she can be identified as being strictly based upon Liddell. Carroll
+                        characterised her as "loving and gentle", "courteous to all", "trustful", and "wildly
+                        curious".[1] His illustrations of her in Alice's Adventures Under Ground, the first version
+                        of Alice's Adventures in Wonderland are influenced by the Pre-Raphaelite artists.</p>
+                </div>
+            </div>
+            <div class="col-lg-8 col-sm-12 mydiv pos-r" style="background: #b8ee30">
+                <img src="example-div-img.png" class="myimg">
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div class="col-lg-8 col-sm-12 mobile-buttom mydiv" style="background: #ee2927; right: 0">
+                <img src="example-div-img.png" class="myimg">
             </div>
 
-            <div class="row">
-                <div class="col-md-6" style="background: #ee2927">aaaa</div>
-                <div class="col-md-6" style="background: #6936ee">bbbb</div>
+            <div class="col-lg-4 col-sm-12 mobile-top" style="background: #6936ee ; left: 0">
+                <div class="my-text-div">
+                    <p class="my-head-text">P-HEAD</p>
+                    <h3>HEADER</h3>
+                    <p>Alice's character has her origins in stories told by Carroll to entertain the Liddell sisters
+                        while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips.
+                        Although she shares her name with Alice Liddell's given name, scholars disagree about
+                        whether or not she can be identified as being strictly based upon Liddell. Carroll
+                        characterised her as "loving and gentle", "courteous to all", "trustful", and "wildly
+                        curious".[1] His illustrations of her in Alice's Adventures Under Ground, the first version
+                        of Alice's Adventures in Wonderland are influenced by the Pre-Raphaelite artists.</p>
+                </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-6" style="background: #71eeeb">aaaa</div>
-                <div class="col-md-6" style="background: #b8ee30">bbbb</div>
-            </div>
-        </section>
+        </div>
 
+        <div class="row">
+            <div class="col-lg-4 col-sm-12" style="background: violet">
+                <div class="my-text-div">
+                    <p class="my-head-text">P-HEAD</p>
+                    <h3>HEADER</h3>
+                    <p>Alice's character has her origins in stories told by Carroll to entertain the Liddell sisters
+                        while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips.
+                        Although she shares her name with Alice Liddell's given name, scholars disagree about
+                        whether or not she can be identified as being strictly based upon Liddell. Carroll
+                        characterised her as "loving and gentle", "courteous to all", "trustful", and "wildly
+                        curious".[1] His illustrations of her in Alice's Adventures Under Ground, the first version
+                        of Alice's Adventures in Wonderland are influenced by the Pre-Raphaelite artists.</p>
+                </div>
+            </div>
+            <div class="col-lg-8 col-sm-12 mydiv pos-r" style="background: #b8ee30">
+                <img src="example-div-img.png" class="myimg">
+            </div>
+        </div>
+
+        <div class="row">
+
+            <div class="col-lg-8 col-sm-12 mobile-buttom mydiv" style="background: #ee2927; right: 0">
+                <img src="example-div-img.png" class="myimg">
+            </div>
+
+            <div class="col-lg-4 col-sm-12 mobile-top" style="background: #6936ee ; left: 0">
+                <div class="my-text-div">
+                    <p class="my-head-text">P-HEAD</p>
+                    <h3>HEADER</h3>
+                    <p>Alice's character has her origins in stories told by Carroll to entertain the Liddell sisters
+                        while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips.
+                        Although she shares her name with Alice Liddell's given name, scholars disagree about
+                        whether or not she can be identified as being strictly based upon Liddell. Carroll
+                        characterised her as "loving and gentle", "courteous to all", "trustful", and "wildly
+                        curious".[1] His illustrations of her in Alice's Adventures Under Ground, the first version
+                        of Alice's Adventures in Wonderland are influenced by the Pre-Raphaelite artists.</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <div class="full_screen">
+        sadasdasdadsя
+    </div>
+
+    <div class="full_screen">
+        sadasdasdadsя
     </div>
 </div>
 
 
-<div id="followup_div">
-    <section class="container-fluid">
-            <div class="row">
-                <div class="col-lg-4 col-sm-12" style="background: violet">
-                    <div class="my-text-div">
-                        <p class="my-head-text">P-HEAD</p>
-                        <h3>HEADER</h3>
-                        <p>Alice's character has her origins in stories told by Carroll to entertain the Liddell sisters while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips. Although she shares her name with Alice Liddell's given name, scholars disagree about whether or not she can be identified as being strictly based upon Liddell. Carroll characterised her as "loving and gentle", "courteous to all", "trustful", and "wildly curious".[1] His illustrations of her in Alice's Adventures Under Ground, the first version of Alice's Adventures in Wonderland are influenced by the Pre-Raphaelite artists.</p>
-                    </div>
-                </div>
-                <div class="col-lg-8 col-sm-12 mydiv pos-r" style="background: #b8ee30"><img src="example-div-img.png" class="myimg"></div>
-            </div>
 
-            <div class="row">
-                <div class="col-lg-8 col-sm-12 mobile-buttom mydiv" style="background: #ee2927; right: 0"><img src="example-div-img.png" class="myimg"></div>
-                <div class="col-lg-4 col-sm-12 mobile-top" style="background: #6936ee ; left: 0">
-                    <div class="my-text-div">
-                        <p class="my-head-text">P-HEAD</p>
-                        <h3>HEADER</h3>
-                        <p>Alice's character has her origins in stories told by Carroll to entertain the Liddell sisters while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips. Although she shares her name with Alice Liddell's given name, scholars disagree about whether or not she can be identified as being strictly based upon Liddell. Carroll characterised her as "loving and gentle", "courteous to all", "trustful", and "wildly curious".[1] His illustrations of her in Alice's Adventures Under Ground, the first version of Alice's Adventures in Wonderland are influenced by the Pre-Raphaelite artists.</p>
-                    </div>
-                </div>
-            </div>
 
-            <div class="row">
-                <div class="col-md-6 order-1" style="background: #71eeeb">aaaa</div>
-                <div class="col-md-6 order-2" style="background: #b8ee30">bbbb</div>
-            </div>
-        </section>
-</div>
 
 <!-- JavaScript -->
 
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+        integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
+        integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
+        integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+        crossorigin="anonymous"></script>
 <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 
 <!-- END of JavaScript -->
