--- a/exampleNavbar.html
+++ b/exampleNavbar.html
@@ -4,125 +4,38 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
+    <link href="Css/example.css" rel="stylesheet">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="CSS/style.css" rel="stylesheet">
 </head>
 <body>
 
 
-<nav class="navbar navbar-toggleable-md  fixed-top">
-
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
+<div id="my-id-screen-1" class="pos-a my-full-screen">
     <div class="container">
-
-        <div class="logo-fix">
-            <a class="navbar-brand" href="#">Navbar</a>
+        <div class="my-1-screen-text-div">
+            <h1>
+                <p>Ми</p>
+                <p>сладкие</p>
+                <p>как конфетки</p>
+            </h1>
         </div>
-
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">DisabledDisabled</a>
-                </li>
-            </ul>
-        </div>
-
     </div>
-</nav>
 
-<!-- NAVBAR
 
-<nav class="navbar navbar-toggleable-md navbar-light fixed-top navbar-fixed-top">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-            data-target="#navbarbuttom" aria-controls="navbarbuttom" aria-expanded="false"
-            aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <section class="container">
-        <div class="logo-fix col-md-6">
-            <a class="my-logo-nav navbar-brand logo-nav mr-auto logo" href="#">jolla</a>
-        </div>
-        <div class="col-md-6">
-            <div class="my-logo-nav collpse navbar-collapse " id="navbarbuttom">
-                <ul class="navbar-nav nav ml-auto">
-                    <li>
-                        <a href="#">Link</a>
-                    </li>
-                    <li>
-                        <a href="#">Long Link</a>
-                    </li>
-                    <li>
-                        <a href="#">Very Long Link</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
-</nav>
--->
-<!-- END OF NAVBAR -->
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-<br>
-s<br>
-s<br>
-sv
-s<br>
-s<br>
-sv
-s<br>
-sv
-s<br>
-s<br>
-s<br>
-s<br>
-s<br>
-v
-sv
-<br><br>
+</div>
+
+
+<div id="my-id-screen-after-1" style="height: 100vh">
+</div>
+<div class="f4"></div>
+<div class="f3"></div>
+<div class="f2"></div>
+<div class="f1"></div>
+
+
+
+
 <!-- JavaScript -->
 <!--
 <script src="JS/script.js"></script>
