--- a/index.htm
+++ b/index.htm
@@ -53,13 +53,13 @@
 
 <!-- END OF NAVBAR -->
 
-<div id="my-id-screen-1" class="pos-a my-full-screen" style="background: url('src/test-1-screen.png'); background-size: 100vw auto">
+<div id="my-id-screen-1" class="pos-a my-full-screen">
     <div class="container">
         <div class="my-1-screen-text-div">
             <h1>
                 <p>Ми</p>
-                <p> сладкие</p>
-                <p> как конфетки</p>
+                <p>сладкие</p>
+                <p>как конфетки</p>
             </h1>
         </div>
     </div>
@@ -72,16 +72,22 @@
     <div id="my-id-screen-2">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-sm-12" style="background: violet">sdsdds</div>
+                <div class="col-lg-8 col-sm-12 ml-auto" style="background: yellow">asdasdasdas</div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-12 ml-auto" style="background: violet">sdsdds</div>
+                <div class="col-lg-4 col-sm-12 " style="background: #97ee72">sdsdds</div>
             </div>
         </div>
     </div>
 
     <div id="my-id-screen-3">
+        <div class="my-black-div-between-2-and-3 pos-a"></div>
 
-        <div class="container my-shadow my-margin-5-t-b">
+
+        <div class="container my-shadow my-big-div-in-3-screen"><!-- костиль с позицыями -->
             <div class="row">
-                <div class="col-lg-4 col-sm-12 my-white-bg">
+                <div class="col-lg-4 col-sm-12">
                     <div class="my-text-div">
                         <p class="my-head-text">P-HEAD</p>
                         <h3>HEADER</h3>
@@ -103,7 +109,7 @@
                     <img src="example-div-img.png" class="myimg">
                 </div>
 
-                <div class="col-lg-4 col-sm-12 mobile-top  my-white-bg">
+                <div class="col-lg-4 col-sm-12 mobile-top">
                     <div class="my-text-div">
                         <p class="my-head-text">P-HEAD</p>
                         <h3>HEADER</h3>
@@ -118,7 +124,7 @@
             </div>
 
             <div class="row">
-                <div class="col-lg-4 col-sm-12  my-white-bg">
+                <div class="col-lg-4 col-sm-12">
                     <div class="my-text-div">
                         <p class="my-head-text">P-HEAD</p>
                         <h3>HEADER</h3>
