Done part of 1 and 2 screen
add figures in 1 and 2 screen

--- a/index.htm
+++ b/index.htm
@@ -7,10 +7,12 @@
     <title>Jolla</title>
     <!-- CSS -->
 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600" rel="stylesheet">
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
-          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">-->
+      integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">-->
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="CSS/style.css" rel="stylesheet">
+    <link href="CSS/figure.css" rel="stylesheet">
 
 </head>
 <body>
@@ -53,13 +55,17 @@
 
 <!-- END OF NAVBAR -->
 
+
+
 <div id="my-id-screen-1" class="pos-a my-full-screen">
     <div class="container">
         <div class="my-1-screen-text-div">
-            <h1>
-                <p>Ми</p>
-                <p>сладкие</p>
-                <p>как конфетки</p>
+            <h1 class="my-font-MS-light my-font-size-medium my-color-blue">
+                We helps you
+            </h1>
+            <h1 class="my-font-MS-semibold my-font-size-large my-color-blue">
+                Create<br>
+                Beauty
             </h1>
         </div>
     </div>
@@ -70,13 +76,42 @@
 <div id="my-id-screen-after-1">
 
     <div id="my-id-screen-2">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-sm-12 ml-auto" style="background: yellow">asdasdasdas</div>
+        <div class="container" style="z-index: 2;">
+            <div class="row my-title-div-2screen-Trusted">
+                <div class="col-lg-8 col-sm-12 ml-auto">
+                    <h1 class="my-font-MS-semibold my-font-size-large my-color-light">Trusted</h1>
+                </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-sm-12 ml-auto" style="background: violet">sdsdds</div>
-                <div class="col-lg-4 col-sm-12 " style="background: #97ee72">sdsdds</div>
+                <div class="col-lg-8 col-sm-12 ml-auto">
+                    <h1 class="my-font-MS-regular my-font-size-small-m my-color-light">Many of the world’s most dynamic companies and individuals find JetBrains tools make them more creative and effective.</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-sm-12 ml-auto">
+                    <!-- КОСТИЛЬ С MARGIN Внизу-->
+                    <h1 class="my-font-MS-medium my-font-size-medium my-color-light" style="margin-top: 7vh">What Developers Say</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-12 ml-auto">
+                    <p class="my-font-size-small-m my-font-MS-light my-color-light">
+                        Alice’s character has her origins in stories told by Carroll to entertain the Liddell sisters while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips. Although she shares her name with Alice Liddell’s given name, scholars disagree about hether or not she can be identified as being strictly based upon Liddell.
+                    </p>
+                    <p class="my-font-size-small-m my-font-MS-semibold my-color-light">
+                        David Starr,<br>
+                        Healthwise
+                    </p>
+                </div>
+                <div class="col-lg-4 col-sm-12">
+                    <p class="my-font-size-small-m my-font-MS-light my-color-light">
+                        Alice’s character has her origins in stories told by Carroll to entertain the Liddell sisters while rowing on the Isis with his friend Robinson Duckworth, and on subsequent rowing trips.
+                    </p>
+                    <p class="my-font-size-small-m my-font-MS-semibold my-color-light">
+                        David Starr,<br>
+                        Healthwise
+                    </p>
+                </div>
             </div>
         </div>
     </div>
@@ -151,6 +186,13 @@
     </div>
 </div>
 
+
+<div class="s1-f1"></div>
+<div class="s1-f2"></div>
+<div class="s1-f3"></div>
+<div class="s2-f2"></div>
+<div class="s2-f3"></div>
+<div class="s2-f1"></div>
 
 <!-- JavaScript -->
 
