--- a/exampleNavbar.html
+++ b/exampleNavbar.html
@@ -34,6 +34,12 @@
 <div class="f1"></div>
 
 
+<div class="v4"></div>
+<div class="v3"></div>
+<div class="v2"></div>
+<div class="v1"></div>
+
+
 
 
 <!-- JavaScript -->
