--- a/index.htm
+++ b/index.htm
@@ -120,7 +120,7 @@
         <div class="my-black-div-between-2-and-3 pos-a"></div>
 
 
-        <div class="container my-shadow my-big-div-in-3-screen"><!-- костиль с позицыями -->
+        <div class="container my-shadow my-big-div-in-3-screen"  style="width: 70vw"><!-- костиль с позицыями -->
             <div class="row">
                 <div class="col-lg-4 col-sm-12">
                     <div class="my-text-div">
